fix: CI error